@@ -272,9 +272,9 @@ static char *help_str =
 "       has been seen on the port.\n\r"
 "setportconfig <tcp port> <config> - Set the port configuration as in\n\r"
 "       the device configuration in the ser2net.conf file.  Valid options\n\r"
-"       are: 300, 1200, 2400, 4800, 9600, 19200, 38400, 115200, EVEN, ODD\n\r"
-"       NONE, 1STOPBIT, 2STOPBITS, 7DATABITS, 8DATABITS, LOCAL (ignore\n\r"
-"       modem control), [-]RTSCTS, [-]XONXOFF.\n\r"
+"       are: 300, 1200, 2400, 4800, 9600, 19200, 38400, 57600, 115200, \n\r"
+"       EVEN, ODD, NONE, 1STOPBIT, 2STOPBITS, 7DATABITS, 8DATABITS, \n\r"
+"       LOCAL (ignore modem control), [-]RTSCTS, [-]XONXOFF.\n\r"
 "       Note that these will not change until the port is disconnected\n\r"
 "       and connected again.\n\r"
 "setportcontrol <tcp port> <controls>\n\r"
