@@ -113,7 +113,7 @@ Set the port configuration as in the device configuration in the
 file.  If conflicting options are specified, the last option will
 be the one used.  Note that these will not change until the port
 is disconnected and connected again.  Options
-.I 300, 1200, 2400, 4800, 9600, 19200, 38400, 115200
+.I 300, 1200, 2400, 4800, 9600, 19200, 38400, 57600, 115200
 set the various baud rates.
 .I EVEN, ODD, NONE
 set the parity.
@@ -203,7 +203,7 @@ The  name  of  the  device  to connect to. This must be in the form of
 .I "device configuration options"
 Sets operational parameters for the serial port.  Values may be
 separated by spaces or commas.  Options
-.I 300, 1200, 2400, 4800, 9600, 19200, 38400, 115200
+.I 300, 1200, 2400, 4800, 9600, 19200, 38400, 57600, 115200
 set the various baud rates.
 .I EVEN, ODD, NONE
 set the parity.
