@@ -27,20 +27,21 @@
 #
 #     options
 #            Sets  operational  parameters  for the serial port.
-#            Options 300, 1200, 2400, 4800, 9600, 19200,  38400,
-#            115200 set the various baud rates.  EVEN, ODD, NONE
-#            set the parity.  1STOPBIT, 2STOPBITS set the number
-#            of  stop bits.  7DATABITS, 8DATABITS set the number
-#            of data bits.  [-]XONXOFF turns on (- off) XON/XOFF
-#            support.  [-]RTSCTS  turns on (- off) hardware flow
-#            control, [-]LOCAL turns off (- on) monitoring of
-#            the modem lines, and [-]HANGUP_WHEN_DONE turns on
-#            (- off) lowering the modem control lines when the
-#            connextion is done.  The "remctl" option allow remote
-#	     control (ala RFC 2217) of serial-port configuration.
-#            A banner name may also be specified, that banner will
-#            be printed for the line.  If no banner is given, then
-#            no banner is printed.
+#            Options 300, 1200, 2400, 4800, 9600, 19200, 38400,
+#            57600, 115200 set the various baud rates.  EVEN,
+#            ODD, NONE set the parity.  1STOPBIT, 2STOPBITS set
+#            the number of stop bits.  7DATABITS, 8DATABITS set
+#            the number of data bits.  [-]XONXOFF turns on (-
+#            off) XON/XOFF support.  [-]RTSCTS turns on (- off)
+#            hardware flow control, [-]LOCAL turns off (- on)
+#            monitoring of the modem lines, and
+#            [-]HANGUP_WHEN_DONE turns on (- off) lowering the
+#            modem control lines when the connextion is done. 
+#            The "remctl" option allow remote control (ala RFC
+#            2217) of serial-port configuration.  A banner name
+#            may also be specified, that banner will be printed
+#            for the line.  If no banner is given, then no
+#            banner is printed.
 #
 # or...
 
